# midi-sequencer

./: .gitignore  CMakeLists.txt  README.md
include/: seq_globals.h  seq_gpio.h  seq_interface.h  seq_sequencer.h  seq_seven_segment.h
schematics/: midi-sequencer.kicad_pcb  midi-sequencer.kicad_sch
src/: main.c  seq_gpio.c  seq_gpio.h  seq_interface.c  seq_sequencer.c  seq_seven_segment.c  sequencer.h  seven_segment.h
